# jupyterhub-cost-monitoring

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  SECURITY.md  chartpress.yaml  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish-helm-chart.yaml  tests.yml
dashbaords/: cloud-cost-users.jsonnet
dashboards/: README.md  cloud-cost-aws.jsonnet  cloud-cost-groups.jsonnet  cloud-cost-users.jsonnet  common.libsonnet
docs/: .readthedocs.yaml  CONTRIBUTING.md  README.md  architecture.md  myst.yml
docs/how-to/: dashboard.md
docs/reference/: api.md  openapi.json
docs/topics/: architecture.md  components.md  cost-calculations.md
helm-charts/: values.schema.yaml
helm-charts/templates/: _helpers-names.tpl  _helpers.tpl  deployment.yaml  netpol.yaml  service.yaml  serviceaccount.yaml
helm/jupyterhub-cost-monitoring/: Chart.yaml  values.schema.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers-extra-files.tpl  ingress.yaml
mounted-files/: cache.py  query.py
src/jupyterhub_cost_monitoring/: app.py  const.py  const_cost_aws.py  const_usage.py  date_utils.py  metrics.py  query_cost_aws.py  query_usage.py
tests/: conftest.py  generate_data.py  test_cost.py  test_data.json  test_data_usage.json  test_date_utils.py  test_integration.py  test_output.json
tests/data/: test_data_cost.json  test_data_cost_component_all.json  test_data_cost_component_core.json  test_data_cost_component_home_storage.json  test_data_usage.json  (+8 more)
(+7 files in other folders)
